Fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -14,9 +14,8 @@ body{
 }
 .layout{
     display: grid;
-    height: 100vh;
-    grid-template-columns: 200px auto;
-    grid-template-rows: 70px  auto 100px ;
+    grid-template-columns: 220px 1fr;
+    grid-template-rows: 70px  1fr auto ;
     grid-template-areas: 
     "header main"
     "sidebar main"
@@ -81,6 +80,7 @@ body{
     color: gray;
     padding: 2%;
     margin-bottom: 7px;
+
 }
 .buttons{
     display: flex;
@@ -150,6 +150,8 @@ body{
     align-items: center;
     justify-content: start;
     gap: 10px;
+    overflow-y: scroll;
+    height: 300px;
     
 }
 .songs-row .fa-thumbtack{
@@ -180,6 +182,8 @@ body{
 .main{
    background-color: var(--spotify-items-background);
     grid-area: main;
+    overflow-x: hidden;
+    overflow-y: auto;
 
 }
 .arrow-button{
@@ -288,15 +292,20 @@ body{
     font-weight: bold;
 }
 .recommended{
-    display: grid;
+    /* display: grid;
     grid-template-columns: repeat(6,minmax(150px,170px));
     gap: 10px;
-    grid-template-rows: 195px;
+    grid-template-rows: 195px; */
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    overflow-x: scroll;
+    scrollbar-width: none;
     
 
 }
 .recommended-mix{
-    height: 176px;
+    /* height: 176px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -308,8 +317,38 @@ body{
 
 }
 
-.footer{
-    background-color: var(--spotify-items-background);
+.footer-container{
     grid-area: footer;
+    background-color: var(--spotify-items-background);
+    padding: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.footer-content{
+    display: flex;
+    flex-direction: column;
 
+}
+.footer-container a{
+    margin-bottom: 1rem;
+}
+.footer-content2{
+    /* height: 100px; */
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.social-media{
+    height: 30px;
+    width: 30px;
+    padding: 4px;
+    background-color: var(--button-background);
+    border-radius: 50%;
+}
+.footer-container a{
+    text-decoration: None;
+    color: var(--icon-before);
 }
